--- a/src/main/webapp/Paginas/facturacompra/View.xhtml
+++ b/src/main/webapp/Paginas/facturacompra/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition>
 
-        <p:dialog id="FacturacompraViewDlg" widgetVar="FacturacompraViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewFacturacompraTitle}">
+        <p:dialog id="FacturacompraViewDlg" widgetVar="FacturacompraViewDialog" modal="true" resizable="false" appendTo="@(body)" header="Información">
             <h:form id="FacturacompraViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{facturacompraController.selected != null}">
