--- a/src/main/webapp/Paginas/pagocompra/List.xhtml
+++ b/src/main/webapp/Paginas/pagocompra/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListPagocompraTitle}"></h:outputText>
+            <h:outputText value="Pago Compras"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="PagocompraListForm">
-                <p:panel header="#{bundle.ListPagocompraTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Pago de Compras</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{pagocompraController.items}" var="item"
                                  selectionMode="single" selection="#{pagocompraController.selected}"
                                  paginator="true"
@@ -23,19 +32,20 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                    <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPagocompraTitle_pagocompraid}"/>
+                                <h:outputText value="Id de pago"/>
                             </f:facet>
                             <h:outputText value="#{item.pagocompraid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPagocompraTitle_fechaPago}"/>
+                                <h:outputText value="Fecha de pago"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaPago}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -49,23 +59,18 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPagocompraTitle_estado}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.estado}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPagocompraTitle_tarjetacreditoid}"/>
+                                <h:outputText value="Id de tarjeta"/>
                             </f:facet>
                             <h:outputText value="#{item.tarjetacreditoid}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{pagocompraController.prepareCreate}" update=":PagocompraCreateForm" oncomplete="PF('PagocompraCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":PagocompraViewForm" oncomplete="PF('PagocompraViewDialog').show()" disabled="#{empty pagocompraController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":PagocompraEditForm" oncomplete="PF('PagocompraEditDialog').show()" disabled="#{empty pagocompraController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{pagocompraController.destroy}" update=":growl,datalist" disabled="#{empty pagocompraController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{pagocompraController.prepareCreate}" update=":PagocompraCreateForm" oncomplete="PF('PagocompraCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":PagocompraViewForm" oncomplete="PF('PagocompraViewDialog').show()" disabled="#{empty pagocompraController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":PagocompraEditForm" oncomplete="PF('PagocompraEditDialog').show()" disabled="#{empty pagocompraController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" id="deleteButton" onclick="return ConfirmDelete()" icon="ui-icon-trash"  value="Eliminar" actionListener="#{pagocompraController.destroy}" update=":growl,datalist" disabled="#{empty pagocompraController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
