--- a/src/main/webapp/Paginas/facturaventa/Create.xhtml
+++ b/src/main/webapp/Paginas/facturaventa/Create.xhtml
@@ -8,27 +8,27 @@
 
     <ui:composition>
 
-        <p:dialog id="FacturaventaCreateDlg" widgetVar="FacturaventaCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateFacturaventaTitle}">
+        <p:dialog id="FacturaventaCreateDlg" widgetVar="FacturaventaCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registro de factura de ventas">
             <h:form id="FacturaventaCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{facturaventaController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateFacturaventaLabel_facturaventaid}" for="facturaventaid" />
-                        <p:inputText id="facturaventaid" value="#{facturaventaController.selected.facturaventaid}" title="#{bundle.CreateFacturaventaTitle_facturaventaid}" required="true" requiredMessage="#{bundle.CreateFacturaventaRequiredMessage_facturaventaid}"/>
-                        <p:outputLabel value="#{bundle.CreateFacturaventaLabel_fechaEmision}" for="fechaEmision" />
-                        <p:calendar id="fechaEmision" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaEmision}" title="#{bundle.EditFacturaventaTitle_fechaEmision}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaEmision}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateFacturaventaLabel_fechaVencimientoPago}" for="fechaVencimientoPago" />
-                        <p:calendar id="fechaVencimientoPago" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaVencimientoPago}" title="#{bundle.EditFacturaventaTitle_fechaVencimientoPago}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaVencimientoPago}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateFacturaventaLabel_descripcion}" for="descripcion" />
-                        <p:inputText id="descripcion" value="#{facturaventaController.selected.descripcion}" title="#{bundle.CreateFacturaventaTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateFacturaventaRequiredMessage_descripcion}"/>
-                        <p:outputLabel value="#{bundle.CreateFacturaventaLabel_pagoid}" for="pagoid" />
-                        <p:selectOneMenu id="pagoid" value="#{facturaventaController.selected.pagoid}" >
+                        <p:outputLabel value="Fecha de emisión: " for="fechaEmision" />
+                        <p:calendar class="form-text" id="fechaEmision" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaEmision}" title="#{bundle.EditFacturaventaTitle_fechaEmision}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaEmision}" showOn="button"/>
+                        <p:outputLabel value="Fecha de vencimiento de pago: " for="fechaVencimientoPago" />
+                        <p:calendar class="form-text" id="fechaVencimientoPago" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaVencimientoPago}" title="#{bundle.EditFacturaventaTitle_fechaVencimientoPago}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaVencimientoPago}" showOn="button"/>
+                        <p:outputLabel value="Descripción: " for="descripcion" />
+                        <p:inputText class="form-text" id="descripcion" value="#{facturaventaController.selected.descripcion}" title="#{bundle.CreateFacturaventaTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateFacturaventaRequiredMessage_descripcion}"/>
+                        <p:outputLabel value="Id de pago: " for="pagoid" />
+                        <p:selectOneMenu class="form-text" id="pagoid" value="#{facturaventaController.selected.pagoid}" >
                             <f:selectItems value="#{pagoventaController.itemsAvailableSelectOne}"
                                            var="pagoidItem"
                                            itemValue="#{pagoidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{facturaventaController.create}" value="#{bundle.Save}" update="display,:FacturaventaListForm:datalist,:growl" oncomplete="handleSubmit(args,'FacturaventaCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="FacturaventaCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{facturaventaController.create}" value="Guardar" update="display,:FacturaventaListForm:datalist,:growl" oncomplete="handleSubmit(args,'FacturaventaCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="FacturaventaCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
