--- a/src/main/webapp/Paginas/facturaventa/Edit.xhtml
+++ b/src/main/webapp/Paginas/facturaventa/Edit.xhtml
@@ -8,28 +8,28 @@
 
     <ui:composition>
 
-        <p:dialog id="FacturaventaEditDlg" widgetVar="FacturaventaEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditFacturaventaTitle}">
+        <p:dialog id="FacturaventaEditDlg" widgetVar="FacturaventaEditDialog" modal="true" resizable="false" appendTo="@(body)" header="Editar factura de venta">
             <h:form id="FacturaventaEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{facturaventaController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditFacturaventaLabel_facturaventaid}" for="facturaventaid" />
-                        <p:inputText id="facturaventaid" value="#{facturaventaController.selected.facturaventaid}" title="#{bundle.EditFacturaventaTitle_facturaventaid}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_facturaventaid}"/>
-                        <p:outputLabel value="#{bundle.EditFacturaventaLabel_fechaEmision}" for="fechaEmision" />
-                        <p:calendar id="fechaEmision" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaEmision}" title="#{bundle.EditFacturaventaTitle_fechaEmision}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaEmision}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditFacturaventaLabel_fechaVencimientoPago}" for="fechaVencimientoPago" />
-                        <p:calendar id="fechaVencimientoPago" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaVencimientoPago}" title="#{bundle.EditFacturaventaTitle_fechaVencimientoPago}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaVencimientoPago}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditFacturaventaLabel_descripcion}" for="descripcion" />
-                        <p:inputText id="descripcion" value="#{facturaventaController.selected.descripcion}" title="#{bundle.EditFacturaventaTitle_descripcion}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_descripcion}"/>
-                        <p:outputLabel value="#{bundle.EditFacturaventaLabel_pagoid}" for="pagoid" />
-                        <p:selectOneMenu id="pagoid" value="#{facturaventaController.selected.pagoid}" >
+                        <p:outputLabel value="Fecha de emisión: " for="fechaEmision" />
+                        <p:calendar class="form-text" id="fechaEmision" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaEmision}" title="#{bundle.EditFacturaventaTitle_fechaEmision}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaEmision}" showOn="button"/>
+                        <p:outputLabel value="Fecha de vencimiento de pago: " for="fechaVencimientoPago" />
+                        <p:calendar class="form-text" id="fechaVencimientoPago" pattern="MM/dd/yyyy" value="#{facturaventaController.selected.fechaVencimientoPago}" title="#{bundle.EditFacturaventaTitle_fechaVencimientoPago}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_fechaVencimientoPago}" showOn="button"/>
+                        <p:outputLabel value="Descripción: " for="descripcion" />
+                        <p:inputText class="form-text" id="descripcion" value="#{facturaventaController.selected.descripcion}" title="#{bundle.EditFacturaventaTitle_descripcion}" required="true" requiredMessage="#{bundle.EditFacturaventaRequiredMessage_descripcion}"/>
+                        <p:outputLabel value="Id de pago: " for="pagoid" />
+                        <p:selectOneMenu class="form-text" id="pagoid" value="#{facturaventaController.selected.pagoid}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{pagoventaController.itemsAvailableSelectOne}"
                                            var="pagoidItem"
                                            itemValue="#{pagoidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{facturaventaController.update}" value="#{bundle.Save}" update="display,:FacturaventaListForm:datalist,:growl" oncomplete="handleSubmit(args, 'FacturaventaEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="FacturaventaEditDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-success" actionListener="#{facturaventaController.update}" value="Guardar" update="display,:FacturaventaListForm:datalist,:growl" oncomplete="handleSubmit(args, 'FacturaventaEditDialog');"/>
+                    <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="FacturaventaEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
