--- a/src/main/webapp/Paginas/historialtrabajo/Create.xhtml
+++ b/src/main/webapp/Paginas/historialtrabajo/Create.xhtml
@@ -8,31 +8,31 @@
 
     <ui:composition>
 
-        <p:dialog id="HistorialtrabajoCreateDlg" widgetVar="HistorialtrabajoCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateHistorialtrabajoTitle}">
+        <p:dialog id="HistorialtrabajoCreateDlg" widgetVar="HistorialtrabajoCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registro de historial">
             <h:form id="HistorialtrabajoCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{historialtrabajoController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateHistorialtrabajoLabel_historialid}" for="historialid" />
-                        <p:inputText id="historialid" value="#{historialtrabajoController.selected.historialid}" title="#{bundle.CreateHistorialtrabajoTitle_historialid}" required="true" requiredMessage="#{bundle.CreateHistorialtrabajoRequiredMessage_historialid}"/>
-                        <p:outputLabel value="#{bundle.CreateHistorialtrabajoLabel_fechaInicio}" for="fechaInicio" />
-                        <p:calendar id="fechaInicio" pattern="MM/dd/yyyy" value="#{historialtrabajoController.selected.fechaInicio}" title="#{bundle.EditHistorialtrabajoTitle_fechaInicio}" required="true" requiredMessage="#{bundle.EditHistorialtrabajoRequiredMessage_fechaInicio}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateHistorialtrabajoLabel_fechaFin}" for="fechaFin" />
-                        <p:calendar id="fechaFin" pattern="MM/dd/yyyy" value="#{historialtrabajoController.selected.fechaFin}" title="#{bundle.EditHistorialtrabajoTitle_fechaFin}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateHistorialtrabajoLabel_cargoid}" for="cargoid" />
-                        <p:selectOneMenu id="cargoid" value="#{historialtrabajoController.selected.cargoid}" required="true" requiredMessage="#{bundle.EditHistorialtrabajoRequiredMessage_cargoid}">
+                        <p:outputLabel value="Fecha de inicio: " for="fechaInicio" />
+                        <p:calendar class="form-text" id="fechaInicio" pattern="MM/dd/yyyy" value="#{historialtrabajoController.selected.fechaInicio}" title="#{bundle.EditHistorialtrabajoTitle_fechaInicio}" required="true" requiredMessage="#{bundle.EditHistorialtrabajoRequiredMessage_fechaInicio}" showOn="button"/>
+                        <p:outputLabel value="Fecha de finalización: " for="fechaFin" />
+                        <p:calendar class="form-text" id="fechaFin" pattern="MM/dd/yyyy" value="#{historialtrabajoController.selected.fechaFin}" title="#{bundle.EditHistorialtrabajoTitle_fechaFin}"  showOn="button"/>
+                        <p:outputLabel value="Id de cargo: " for="cargoid" />
+                        <p:selectOneMenu class="form-text" id="cargoid" value="#{historialtrabajoController.selected.cargoid}" required="true" requiredMessage="#{bundle.EditHistorialtrabajoRequiredMessage_cargoid}">
                             <f:selectItems value="#{cargoController.itemsAvailableSelectOne}"
                                            var="cargoidItem"
                                            itemValue="#{cargoidItem}"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="#{bundle.CreateHistorialtrabajoLabel_empleadoid}" for="empleadoid" />
-                        <p:selectOneMenu id="empleadoid" value="#{historialtrabajoController.selected.empleadoid}" required="true" requiredMessage="#{bundle.EditHistorialtrabajoRequiredMessage_empleadoid}">
+                        <p:outputLabel value="Id de empleado: " for="empleadoid" />
+                        <p:selectOneMenu class="form-text" id="empleadoid" value="#{historialtrabajoController.selected.empleadoid}" required="true" requiredMessage="#{bundle.EditHistorialtrabajoRequiredMessage_empleadoid}">
                             <f:selectItems value="#{empleadoController.itemsAvailableSelectOne}"
                                            var="empleadoidItem"
                                            itemValue="#{empleadoidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{historialtrabajoController.create}" value="#{bundle.Save}" update="display,:HistorialtrabajoListForm:datalist,:growl" oncomplete="handleSubmit(args,'HistorialtrabajoCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="HistorialtrabajoCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{historialtrabajoController.create}" value="Guardar" update="display,:HistorialtrabajoListForm:datalist,:growl" oncomplete="handleSubmit(args,'HistorialtrabajoCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="HistorialtrabajoCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
