--- a/src/main/webapp/Paginas/historialtrabajo/List.xhtml
+++ b/src/main/webapp/Paginas/historialtrabajo/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListHistorialtrabajoTitle}"></h:outputText>
+            <h:outputText value="Historial"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="HistorialtrabajoListForm">
-                <p:panel header="#{bundle.ListHistorialtrabajoTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Historial de Trabajo</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{historialtrabajoController.items}" var="item"
                                  selectionMode="single" selection="#{historialtrabajoController.selected}"
                                  paginator="true"
@@ -23,19 +32,20 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                        <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListHistorialtrabajoTitle_historialid}"/>
+                                <h:outputText value="Id de hitorial"/>
                             </f:facet>
                             <h:outputText value="#{item.historialid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListHistorialtrabajoTitle_fechaInicio}"/>
+                                <h:outputText value="Fecha de inicio"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaInicio}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -43,7 +53,7 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListHistorialtrabajoTitle_fechaFin}"/>
+                                <h:outputText value="Fecha de finalización"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaFin}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -51,23 +61,24 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListHistorialtrabajoTitle_cargoid}"/>
+                                <h:outputText value="Id de cargo"/>
                             </f:facet>
                             <h:outputText value="#{item.cargoid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListHistorialtrabajoTitle_empleadoid}"/>
+                                <h:outputText value="Id de empleado"/>
                             </f:facet>
                             <h:outputText value="#{item.empleadoid}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{historialtrabajoController.prepareCreate}" update=":HistorialtrabajoCreateForm" oncomplete="PF('HistorialtrabajoCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":HistorialtrabajoViewForm" oncomplete="PF('HistorialtrabajoViewDialog').show()" disabled="#{empty historialtrabajoController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":HistorialtrabajoEditForm" oncomplete="PF('HistorialtrabajoEditDialog').show()" disabled="#{empty historialtrabajoController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{historialtrabajoController.destroy}" update=":growl,datalist" disabled="#{empty historialtrabajoController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm"  id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{historialtrabajoController.prepareCreate}" update=":HistorialtrabajoCreateForm" oncomplete="PF('HistorialtrabajoCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm"  id="viewButton"   icon="ui-icon-search" value="Ver" update=":HistorialtrabajoViewForm" oncomplete="PF('HistorialtrabajoViewDialog').show()" disabled="#{empty historialtrabajoController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm"  id="editButton"   icon="ui-icon-pencil" value="Editar" update=":HistorialtrabajoEditForm" oncomplete="PF('HistorialtrabajoEditDialog').show()" disabled="#{empty historialtrabajoController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" onclick="return ConfirmDelete()"  id="deleteButton" icon="ui-icon-trash"  value="Eliminar" actionListener="#{historialtrabajoController.destroy}" update=":growl,datalist" disabled="#{empty historialtrabajoController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
