--- a/src/main/webapp/Paginas/historialtrabajo/View.xhtml
+++ b/src/main/webapp/Paginas/historialtrabajo/View.xhtml
@@ -8,26 +8,28 @@
 
     <ui:composition>
 
-        <p:dialog id="HistorialtrabajoViewDlg" widgetVar="HistorialtrabajoViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewHistorialtrabajoTitle}">
+        <p:dialog id="HistorialtrabajoViewDlg" widgetVar="HistorialtrabajoViewDialog" modal="true" resizable="false" appendTo="@(body)" header="Información">
             <h:form id="HistorialtrabajoViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{historialtrabajoController.selected != null}">
-                        <h:outputText value="#{bundle.ViewHistorialtrabajoLabel_historialid}"/>
+                        <h:outputText value="Id de historial: "/>
                         <h:outputText value="#{historialtrabajoController.selected.historialid}" title="#{bundle.ViewHistorialtrabajoTitle_historialid}"/>
-                        <h:outputText value="#{bundle.ViewHistorialtrabajoLabel_fechaInicio}"/>
+                        <h:outputText value="Fecha de inicio: "/>
                         <h:outputText value="#{historialtrabajoController.selected.fechaInicio}" title="#{bundle.ViewHistorialtrabajoTitle_fechaInicio}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
                         </h:outputText>
-                        <h:outputText value="#{bundle.ViewHistorialtrabajoLabel_fechaFin}"/>
+                        <h:outputText value="Fecha de finalización: "/>
                         <h:outputText value="#{historialtrabajoController.selected.fechaFin}" title="#{bundle.ViewHistorialtrabajoTitle_fechaFin}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
                         </h:outputText>
-                        <h:outputText value="#{bundle.ViewHistorialtrabajoLabel_cargoid}"/>
+                        <h:outputText value="Id de cargo: "/>
                         <h:outputText value="#{historialtrabajoController.selected.cargoid}" title="#{bundle.ViewHistorialtrabajoTitle_cargoid}"/>
-                        <h:outputText value="#{bundle.ViewHistorialtrabajoLabel_empleadoid}"/>
+                        <h:outputText value="Id de empleado: "/>
                         <h:outputText value="#{historialtrabajoController.selected.empleadoid}" title="#{bundle.ViewHistorialtrabajoTitle_empleadoid}"/>
                     </p:panelGrid>
-                    <p:commandButton value="#{bundle.Close}" onclick="HistorialtrabajoViewDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-info" value="Aceptar" onclick="HistorialtrabajoViewDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
