--- a/src/main/webapp/Paginas/ordencompra/List.xhtml
+++ b/src/main/webapp/Paginas/ordencompra/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListOrdencompraTitle}"></h:outputText>
+            <h:outputText value="Orden Compra"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="OrdencompraListForm">
-                <p:panel header="#{bundle.ListOrdencompraTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Orden de Compras</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{ordencompraController.items}" var="item"
                                  selectionMode="single" selection="#{ordencompraController.selected}"
                                  paginator="true"
@@ -23,19 +32,20 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                    <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_ordencompraid}"/>
+                                <h:outputText value="Id de orden de compra"/>
                             </f:facet>
                             <h:outputText value="#{item.ordencompraid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_fechaCompra}"/>
+                                <h:outputText value="Fecha de compra: "/>
                             </f:facet>
                             <h:outputText value="#{item.fechaCompra}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -43,53 +53,30 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_status}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.status}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_iva}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.iva}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_subtotal}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.subtotal}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_total}"/>
+                                <h:outputText value="Total "/>
                             </f:facet>
                             <h:outputText value="#{item.total}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_descripcion}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.descripcion}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_facturaid}"/>
+                                <h:outputText value="Id de factura"/>
                             </f:facet>
                             <h:outputText value="#{item.facturaid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdencompraTitle_proveedorid}"/>
+                                <h:outputText value="Id de proveedor"/>
                             </f:facet>
                             <h:outputText value="#{item.proveedorid}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{ordencompraController.prepareCreate}" update=":OrdencompraCreateForm" oncomplete="PF('OrdencompraCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":OrdencompraViewForm" oncomplete="PF('OrdencompraViewDialog').show()" disabled="#{empty ordencompraController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":OrdencompraEditForm" oncomplete="PF('OrdencompraEditDialog').show()" disabled="#{empty ordencompraController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{ordencompraController.destroy}" update=":growl,datalist" disabled="#{empty ordencompraController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{ordencompraController.prepareCreate}" update=":OrdencompraCreateForm" oncomplete="PF('OrdencompraCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":OrdencompraViewForm" oncomplete="PF('OrdencompraViewDialog').show()" disabled="#{empty ordencompraController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":OrdencompraEditForm" oncomplete="PF('OrdencompraEditDialog').show()" disabled="#{empty ordencompraController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" onclick="return ConfirmDelete()" id="deleteButton" icon="ui-icon-trash"  value="Eliminar" actionListener="#{ordencompraController.destroy}" update=":growl,datalist" disabled="#{empty ordencompraController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
