--- a/src/main/webapp/Paginas/ordencompra/View.xhtml
+++ b/src/main/webapp/Paginas/ordencompra/View.xhtml
@@ -8,13 +8,13 @@
 
     <ui:composition>
 
-        <p:dialog id="OrdencompraViewDlg" widgetVar="OrdencompraViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewOrdencompraTitle}">
+        <p:dialog id="OrdencompraViewDlg" widgetVar="OrdencompraViewDialog" modal="true" resizable="false" appendTo="@(body)" header="Información">
             <h:form id="OrdencompraViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{ordencompraController.selected != null}">
-                        <h:outputText value="#{bundle.ViewOrdencompraLabel_ordencompraid}"/>
+                        <h:outputText value="Id de orden de compra: "/>
                         <h:outputText value="#{ordencompraController.selected.ordencompraid}" title="#{bundle.ViewOrdencompraTitle_ordencompraid}"/>
-                        <h:outputText value="#{bundle.ViewOrdencompraLabel_fechaCompra}"/>
+                        <h:outputText value="Fecha de compra: "/>
                         <h:outputText value="#{ordencompraController.selected.fechaCompra}" title="#{bundle.ViewOrdencompraTitle_fechaCompra}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
                         </h:outputText>
@@ -28,12 +28,14 @@
                         <h:outputText value="#{ordencompraController.selected.total}" title="#{bundle.ViewOrdencompraTitle_total}"/>
                         <h:outputText value="#{bundle.ViewOrdencompraLabel_descripcion}"/>
                         <h:outputText value="#{ordencompraController.selected.descripcion}" title="#{bundle.ViewOrdencompraTitle_descripcion}"/>
-                        <h:outputText value="#{bundle.ViewOrdencompraLabel_facturaid}"/>
+                        <h:outputText value="Id de factura: "/>
                         <h:outputText value="#{ordencompraController.selected.facturaid}" title="#{bundle.ViewOrdencompraTitle_facturaid}"/>
-                        <h:outputText value="#{bundle.ViewOrdencompraLabel_proveedorid}"/>
+                        <h:outputText value="Id de proveedor: "/>
                         <h:outputText value="#{ordencompraController.selected.proveedorid}" title="#{bundle.ViewOrdencompraTitle_proveedorid}"/>
                     </p:panelGrid>
-                    <p:commandButton value="#{bundle.Close}" onclick="OrdencompraViewDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-info" value="Aceptar" onclick="OrdencompraViewDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
