--- a/src/main/webapp/Paginas/ordenventa/List.xhtml
+++ b/src/main/webapp/Paginas/ordenventa/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListOrdenventaTitle}"></h:outputText>
+            <h:outputText value="Orden Venta"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="OrdenventaListForm">
-                <p:panel header="#{bundle.ListOrdenventaTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Orden de Ventas</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{ordenventaController.items}" var="item"
                                  selectionMode="single" selection="#{ordenventaController.selected}"
                                  paginator="true"
@@ -29,13 +38,13 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_ordenventaid}"/>
+                                <h:outputText value="Id de orden de venta "/>
                             </f:facet>
                             <h:outputText value="#{item.ordenventaid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_fechaVenta}"/>
+                                <h:outputText value="Fecha de venta "/>
                             </f:facet>
                             <h:outputText value="#{item.fechaVenta}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -43,51 +52,27 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_status}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.status}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_iva}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.iva}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_subtotal}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.subtotal}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_total}"/>
+                                <h:outputText value="Total"/>
                             </f:facet>
                             <h:outputText value="#{item.total}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_descripcion}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.descripcion}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_clienteid}"/>
+                                <h:outputText value="Id de cliente "/>
                             </f:facet>
                             <h:outputText value="#{item.clienteid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrdenventaTitle_facturaid}"/>
+                                <h:outputText value="Id de factura:"/>
                             </f:facet>
                             <h:outputText value="#{item.facturaid}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{ordenventaController.prepareCreate}" update=":OrdenventaCreateForm" oncomplete="PF('OrdenventaCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":OrdenventaViewForm" oncomplete="PF('OrdenventaViewDialog').show()" disabled="#{empty ordenventaController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":OrdenventaEditForm" oncomplete="PF('OrdenventaEditDialog').show()" disabled="#{empty ordenventaController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{ordenventaController.destroy}" update=":growl,datalist" disabled="#{empty ordenventaController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{ordenventaController.prepareCreate}" update=":OrdenventaCreateForm" oncomplete="PF('OrdenventaCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":OrdenventaViewForm" oncomplete="PF('OrdenventaViewDialog').show()" disabled="#{empty ordenventaController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":OrdenventaEditForm" oncomplete="PF('OrdenventaEditDialog').show()" disabled="#{empty ordenventaController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" onclick="return ConfirmDelete()" id="deleteButton" icon="ui-icon-trash"  value="Eliminar" actionListener="#{ordenventaController.destroy}" update=":growl,datalist" disabled="#{empty ordenventaController.selected}"/>
                         </f:facet>
                     </p:dataTable>
                 </p:panel>
