--- a/src/main/webapp/Paginas/pagocompra/Create.xhtml
+++ b/src/main/webapp/Paginas/pagocompra/Create.xhtml
@@ -8,27 +8,27 @@
 
     <ui:composition>
 
-        <p:dialog id="PagocompraCreateDlg" widgetVar="PagocompraCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreatePagocompraTitle}">
+        <p:dialog id="PagocompraCreateDlg" widgetVar="PagocompraCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registro de pago">
             <h:form id="PagocompraCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{pagocompraController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreatePagocompraLabel_pagocompraid}" for="pagocompraid" />
-                        <p:inputText id="pagocompraid" value="#{pagocompraController.selected.pagocompraid}" title="#{bundle.CreatePagocompraTitle_pagocompraid}" required="true" requiredMessage="#{bundle.CreatePagocompraRequiredMessage_pagocompraid}"/>
-                        <p:outputLabel value="#{bundle.CreatePagocompraLabel_fechaPago}" for="fechaPago" />
+                        <p:outputLabel value="Fecha de pago: " for="fechaPago" />
                         <p:calendar id="fechaPago" pattern="MM/dd/yyyy" value="#{pagocompraController.selected.fechaPago}" title="#{bundle.EditPagocompraTitle_fechaPago}" required="true" requiredMessage="#{bundle.EditPagocompraRequiredMessage_fechaPago}" showOn="button"/>
                         <p:outputLabel value="#{bundle.CreatePagocompraLabel_monto}" for="monto" />
                         <p:inputText id="monto" value="#{pagocompraController.selected.monto}" title="#{bundle.CreatePagocompraTitle_monto}" required="true" requiredMessage="#{bundle.CreatePagocompraRequiredMessage_monto}"/>
                         <p:outputLabel value="#{bundle.CreatePagocompraLabel_estado}" for="estado" />
                         <p:inputText id="estado" value="#{pagocompraController.selected.estado}" title="#{bundle.CreatePagocompraTitle_estado}" required="true" requiredMessage="#{bundle.CreatePagocompraRequiredMessage_estado}"/>
-                        <p:outputLabel value="#{bundle.CreatePagocompraLabel_tarjetacreditoid}" for="tarjetacreditoid" />
+                        <p:outputLabel value="Id de tarjeta" for="tarjetacreditoid" />
                         <p:selectOneMenu id="tarjetacreditoid" value="#{pagocompraController.selected.tarjetacreditoid}" required="true" requiredMessage="#{bundle.EditPagocompraRequiredMessage_tarjetacreditoid}">
                             <f:selectItems value="#{tarjetacreditocompraController.itemsAvailableSelectOne}"
                                            var="tarjetacreditoidItem"
                                            itemValue="#{tarjetacreditoidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{pagocompraController.create}" value="#{bundle.Save}" update="display,:PagocompraListForm:datalist,:growl" oncomplete="handleSubmit(args,'PagocompraCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="PagocompraCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{pagocompraController.create}" value="Guardar" update="display,:PagocompraListForm:datalist,:growl" oncomplete="handleSubmit(args,'PagocompraCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="PagocompraCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
