--- a/src/main/webapp/Paginas/pagocompra/Edit.xhtml
+++ b/src/main/webapp/Paginas/pagocompra/Edit.xhtml
@@ -8,19 +8,17 @@
 
     <ui:composition>
 
-        <p:dialog id="PagocompraEditDlg" widgetVar="PagocompraEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditPagocompraTitle}">
+        <p:dialog id="PagocompraEditDlg" widgetVar="PagocompraEditDialog" modal="true" resizable="false" appendTo="@(body)" header="Editar pago">
             <h:form id="PagocompraEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{pagocompraController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditPagocompraLabel_pagocompraid}" for="pagocompraid" />
-                        <p:inputText id="pagocompraid" value="#{pagocompraController.selected.pagocompraid}" title="#{bundle.EditPagocompraTitle_pagocompraid}" required="true" requiredMessage="#{bundle.EditPagocompraRequiredMessage_pagocompraid}"/>
-                        <p:outputLabel value="#{bundle.EditPagocompraLabel_fechaPago}" for="fechaPago" />
+                        <p:outputLabel value="Fecha de pago: " for="fechaPago" />
                         <p:calendar id="fechaPago" pattern="MM/dd/yyyy" value="#{pagocompraController.selected.fechaPago}" title="#{bundle.EditPagocompraTitle_fechaPago}" required="true" requiredMessage="#{bundle.EditPagocompraRequiredMessage_fechaPago}" showOn="button"/>
                         <p:outputLabel value="#{bundle.EditPagocompraLabel_monto}" for="monto" />
                         <p:inputText id="monto" value="#{pagocompraController.selected.monto}" title="#{bundle.EditPagocompraTitle_monto}" required="true" requiredMessage="#{bundle.EditPagocompraRequiredMessage_monto}"/>
                         <p:outputLabel value="#{bundle.EditPagocompraLabel_estado}" for="estado" />
                         <p:inputText id="estado" value="#{pagocompraController.selected.estado}" title="#{bundle.EditPagocompraTitle_estado}" required="true" requiredMessage="#{bundle.EditPagocompraRequiredMessage_estado}"/>
-                        <p:outputLabel value="#{bundle.EditPagocompraLabel_tarjetacreditoid}" for="tarjetacreditoid" />
+                        <p:outputLabel value="Id de tarjeta: " for="tarjetacreditoid" />
                         <p:selectOneMenu id="tarjetacreditoid" value="#{pagocompraController.selected.tarjetacreditoid}" required="true" requiredMessage="#{bundle.EditPagocompraRequiredMessage_tarjetacreditoid}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{tarjetacreditocompraController.itemsAvailableSelectOne}"
@@ -28,8 +26,10 @@
                                            itemValue="#{tarjetacreditoidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{pagocompraController.update}" value="#{bundle.Save}" update="display,:PagocompraListForm:datalist,:growl" oncomplete="handleSubmit(args, 'PagocompraEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="PagocompraEditDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-success" actionListener="#{pagocompraController.update}" value="Guardar" update="display,:PagocompraListForm:datalist,:growl" oncomplete="handleSubmit(args, 'PagocompraEditDialog');"/>
+                    <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="PagocompraEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
