--- a/src/main/webapp/Paginas/pagoventa/List.xhtml
+++ b/src/main/webapp/Paginas/pagoventa/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListPagoventaTitle}"></h:outputText>
+            <h:outputText value="Pago Ventas"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="PagoventaListForm">
-                <p:panel header="#{bundle.ListPagoventaTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Pago de Ventas</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{pagoventaController.items}" var="item"
                                  selectionMode="single" selection="#{pagoventaController.selected}"
                                  paginator="true"
@@ -23,7 +32,8 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                    <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
@@ -60,12 +70,13 @@
                             <h:outputText value="#{item.tarjetacreditoid}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{pagoventaController.prepareCreate}" update=":PagoventaCreateForm" oncomplete="PF('PagoventaCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":PagoventaViewForm" oncomplete="PF('PagoventaViewDialog').show()" disabled="#{empty pagoventaController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":PagoventaEditForm" oncomplete="PF('PagoventaEditDialog').show()" disabled="#{empty pagoventaController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{pagoventaController.destroy}" update=":growl,datalist" disabled="#{empty pagoventaController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{pagoventaController.prepareCreate}" update=":PagoventaCreateForm" oncomplete="PF('PagoventaCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":PagoventaViewForm" oncomplete="PF('PagoventaViewDialog').show()" disabled="#{empty pagoventaController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":PagoventaEditForm" oncomplete="PF('PagoventaEditDialog').show()" disabled="#{empty pagoventaController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" id="deleteButton" onclick="return ConfirmDelete()" icon="ui-icon-trash"  value="Eliminar" actionListener="#{pagoventaController.destroy}" update=":growl,datalist" disabled="#{empty pagoventaController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
